:book: Render book

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,6 +33,7 @@ book:
       chapters:
         - code-style.qmd
         - coding-community.qmd
+        - data-wrangling.qmd
         - git-tips.qmd
         - r.qmd
         - shiny.qmd
